syntax="proto3";

option go_package = "/pb";

service Echo {
  rpc EchoBack(EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}